--- a/AttendanceRegister/Views/Home/AddAttendance.cshtml
+++ b/AttendanceRegister/Views/Home/AddAttendance.cshtml
@@ -1,33 +1,46 @@
 ﻿@model AttendanceRegister.Models.AttendanceRecord
+<head>
+    <link rel="stylesheet" href="~/css/form-styles.css" />
+</head>
 
 <form method="post" asp-action="AddAttendance" asp-controller="Home">
 
-    <label for="ClassName">Class Name:</label>
-    <input type="text" name="ClassName" required><br>
-    
-<label for="Grade">Grade:</label>
-    <input type="number" name="Grade" required><br>
-    
-<label for="StudentName">Student Name:</label>
-<input type="text" name="StudentName" required><br>
+    <div class="form-group">
+        <label for="ClassName">Class Name:</label>
+        <input type="text" name="ClassName" required><br>
+    </div>
+
+    <div class="form-group">
+        <label for="Grade">Grade:</label>
+        <input type="number" name="Grade" required><br>
+    </div>
+
+    <div class="form-group">
+        <label for="StudentName">Student Name:</label>
+        <input type="text" name="StudentName" required><br>
+    </div>
 
 
-<label for="IsPresent">Attendace Status:</label>
+    <label for="IsPresent">Attendace Status:</label>
 
-<select name="IsPresent" required>
-    <option value="true">Present</option>
-    <option value="false">Absent</option>
-</select><br>
+    <select name="IsPresent" required>
+        <option value="true">Present</option>
+        <option value="false">Absent</option>
+    </select><br>
 
-<label for="Date">Date:</label>
-<input type="date" name="Date" required><br>
+    <div class="form-group">
+        <label for="Date">Date:</label>
+        <input type="date" name="Date" required><br>
+    </div>
 
-<label for="Time">Time:</label>
-<input type="time" name="Time" required><br>
+    <div class="form-group">
+        <label for="Time">Time:</label>
+        <input type="time" name="Time" required><br>
+    </div>
 
     <!-- Add the hidden input for RowVersion here -->
-   @* <input type="hidden" asp-for="RowVersion" />*@
+    @* <input type="hidden" asp-for="RowVersion" />*@
 
-<button type="submit">Submit</button>
+    <button type="submit">Submit</button>
 
 </form>
