--- a/AttendanceRegister/Views/Home/Index.cshtml
+++ b/AttendanceRegister/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AttendanceRecord>
 
-<h2>Attendnace Records</h2>
+<h2>Attendance Records</h2>
 
 <a asp-controller="Home" asp-action="AddAttendance">Add Attendance</a>
 
@@ -12,7 +12,7 @@
                 <th>Class Name</th>
                 <th>Grade</th>
                 <th>Student Name</th>
-                <th>Attendace Status</th>
+                <th>Attendance Status</th>
                 <th>Date</th>
                 <th>Time</th>
             </tr>
